base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cna-covid-data
  labels:
    name: cna-covid-data
