base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cna-covid-data
  name: cna-covid-data
spec:
  ports:
    - port: 80
      name: cna-covid-data
      protocol: TCP
      targetPort: 8080
  selector:
    app: cna-covid-data
  type: ClusterIP
