base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cna-covid-data
  labels:
    app: cna-covid-data
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
    - host: "*.api.dev.pkhamdee.com"
      http:
        paths:
          - path: /api/v1/reports.*
            backend:
              serviceName: cna-covid-data
              servicePort: 80
    - http:
        paths:
          - path: /api/v1/reports.*
            backend:
              serviceName: cna-covid-data
              servicePort: 80
